--- a/manual.html
+++ b/manual.html
@@ -1077,13 +1077,13 @@ function loadlanguage(lang,ind,omithistory) {
 			updateChapterListings();
 	    	twttr.widgets.load();
 	    },250);
-		activeLanguage == "en";
-		activeLanguageCode == 0;
+		activeLanguage = "en";
+		activeLanguageCode = 0;
 
 			//update the language buttons
 			langButtons = document.querySelectorAll(".languagebutton");
 			langButtons.forEach(function(langElement) {
-				langElement.querySelector(".languagedescription").innerHTML = languageMatrix[activeLanguageCode][activeLanguageCode];
+				langElement.querySelector(".languagedescription").innerHTML = languageMatrix[0][0];
 			})
 	}
 }
