--- a/manual.html
+++ b/manual.html
@@ -69,13 +69,13 @@
 			<div id="m-main-home-content">
 				<div style="display:flex;justify-content: center;align-items: center">
 					<div style="flex-basis:25%;padding-right:1rem"><img src="icon1024.webp" style="width:100%"></div>
-					<div style="flex-basis:75%;border-bottom:1px solid white"><span style="font-size: 1.5rem;color: white;font-weight: bold">SimTIVA Manual</span></div>
+					<div style="flex-basis:75%;border-bottom:1px solid white"><h1 style="margin:0;padding:0"><span style="font-size: 1.5rem;color: white;font-weight: bold">SimTIVA Manual</span></h1></div>
 				</div>
 				<div style="display:flex;justify-content: center;align-items: center">
 					<div style="flex-basis: 25%"></div>
 					<div style="flex-basis: 75%">
 						<p style="color:white;font-weight:bold">Welcome!</p>
-						<p style="color:#ddd">This is the user manual for <a href="https://simtiva.app" target="_blank">SimTIVA.app</a>, a web app to simulate target-controlled infusion (TCI). This manual contains 9 chapters: the first two chapters cover the basic functionalities to help you get started. We have translated the manual into multiple languages. Video tutorials are coming soon.</p>
+						<div><h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">This is the user manual for <a href="https://simtiva.app" target="_blank">SimTIVA.app</a>, a web app to simulate target-controlled infusion (TCI).</h2><p style="color:#ddd;font-size:0.9rem">This manual contains 9 chapters: the first two chapters cover the basic functionalities to help you get started. We have translated the manual into multiple languages. Video tutorials are coming soon.</p></div>
 						<div class="startbutton" style="" onclick="getChapter(1)">
 							<span><i class="fas fa-chevron-circle-right"></i></span>
 							<span class="startdescription">START</span>
