--- a/manual.html
+++ b/manual.html
@@ -74,8 +74,10 @@
 				<div style="display:flex;justify-content: center;align-items: center">
 					<div style="flex-basis: 25%"></div>
 					<div style="flex-basis: 75%">
-						<p style="color:white;font-weight:bold">Welcome!</p>
-						<div><h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">This is the user manual for <a href="https://simtiva.app" target="_blank">SimTIVA.app</a>, a web app to simulate target-controlled infusion (TCI).</h2><p style="color:#ddd;font-size:0.9rem">This manual contains 9 chapters: the first two chapters cover the basic functionalities to help you get started. We have translated the manual into multiple languages. Video tutorials are coming soon.</p></div>
+						<div id="welcomemessage">
+							<p style="color:white;font-weight:bold;font-size:0.9rem">Welcome!</p>
+							<h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">This is the user manual for <a href="https://simtiva.app" target="_blank">SimTIVA.app</a>, a web app to simulate target-controlled infusion (TCI).</h2><p style="color:#ddd;font-size:0.9rem">This manual contains 9 chapters: the first two chapters cover the basic functionalities to help you get started. We have translated the manual into multiple languages. Video tutorials are coming soon.</p>
+						</div>
 						<div class="startbutton" style="" onclick="getChapter(1)">
 							<span><i class="fas fa-chevron-circle-right"></i></span>
 							<span class="startdescription">START</span>
@@ -1033,6 +1035,9 @@ function loadlanguage(lang,ind,omithistory) {
 				langElement.querySelector(".languagedescription").innerHTML = languageMatrix[activeLanguageCode][activeLanguageCode];
 			})
 
+			//update intro
+			document.getElementById("welcomemessage").innerHTML = welcomeMessageArray[activeLanguageCode];
+
 	  		for (count=1;count<=9;count++) {
 	  			key2 = "chapter" + count;
 	  			if (data[key2] != undefined) {
@@ -1130,6 +1135,16 @@ disclaimerArray = [
 	"A tradução é feita usando o ChatGPT. O ChatGPT pode cometer erros. Por favor, verifique as informações importantes por si mesmo.",
 	"翻訳は ChatGPT を使用して行われます。ChatGPT には間違いがある可能性があります。重要な情報は自分で確認してください。",
 	"Перевод выполняется с использованием ChatGPT. ChatGPT может допускать ошибки. Пожалуйста, проверьте важную информацию самостоятельно."
+]
+welcomeMessageArray = [
+	`<p style="color:white;font-weight:bold;font-size:0.9rem">Welcome!</p><h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">This is the user manual for <a href="https://simtiva.app" target="_blank">SimTIVA.app</a>, a web app to simulate target-controlled infusion (TCI).</h2><p style="color:#ddd;font-size:0.9rem">This manual contains 9 chapters: the first two chapters cover the basic functionalities to help you get started. We have translated the manual into multiple languages. Video tutorials are coming soon.</p>`,
+	`<p style="color:white;font-weight:bold;font-size:0.9rem">Bienvenue !</p><h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">Il s'agit du manuel de l'utilisateur pour <a href="https://simtiva.app" target="_blank">SimTIVA.app</a>, une application web pour simuler l'infusion contrôlée par cible (TCI).</h2><p style="color:#ddd;font-size:0.9rem">Ce manuel contient 9 chapitres : les deux premiers chapitres couvrent les fonctionnalités de base pour vous aider à démarrer. Nous avons traduit le manuel en plusieurs langues. Des tutoriels vidéo seront bientôt disponibles.</p>`,
+	`<p style="color:white;font-weight:bold;font-size:0.9rem">¡Bienvenido!</p><h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">Este es el manual del usuario para <a href="https://simtiva.app" target="_blank">SimTIVA.app</a>, una aplicación web para simular la infusión controlada por objetivo (TCI).</h2><p style="color:#ddd;font-size:0.9rem">Este manual contiene 9 capítulos: los dos primeros cubren las funcionalidades básicas para ayudarte a empezar. Hemos traducido el manual a varios idiomas. Pronto habrá tutoriales en vídeo.</p>`,
+	`<p style="color:white;font-weight:bold;font-size:0.9rem">欢迎！</p><h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">这是 <a href="https://simtiva.app" target="_blank">SimTIVA.app</a> 的用户手册，一个用于模拟目标控制输注（TCI）的网络应用程序。</h2><p style="color:#ddd;font-size:0.9rem">本手册包含9个章节：前两章涵盖了基本功能，以帮助您快速入门。我们已将手册翻译成多种语言。视频教程即将推出。</p>`,
+	`<p style="color:white;font-weight:bold;font-size:0.9rem">Bem-vindo!</p><h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">Este é o manual do usuário para <a href="https://simtiva.app" target="_blank">SimTIVA.app</a>, um aplicativo web para simular infusão controlada por alvo (TCI).</h2><p style="color:#ddd;font-size:0.9rem">Este manual contém 9 capítulos: os dois primeiros abordam as funcionalidades básicas para ajudá-lo a começar. Traduzimos o manual para vários idiomas. Vídeos tutoriais em breve.</p>`,
+	`<p style="color:white;font-weight:bold;font-size:0.9rem">ようこそ！</p><h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">これは、<a href="https://simtiva.app" target="_blank">SimTIVA.app</a> のユーザーマニュアルです。これは、ターゲット制御インフュージョン（TCI）をシミュレートするためのWebアプリケーションです。</h2><p style="color:#ddd;font-size:0.9rem">このマニュアルには、9つの章が含まれています。最初の2つの章では、基本機能について説明し、始めるのに役立ちます。マニュアルは複数の言語に翻訳されています。ビデオチュートリアルは近日公開予定です。</p>`,
+	`<p style="color:white;font-weight:bold;font-size:0.9rem">Добро пожаловать!</p><h2 style="color:inherit;font-size:0.9rem;border:0;padding:0;margin:0;color:#eee">Это руководство пользователя для <a href="https://simtiva.app" target="_blank">SimTIVA.app</a>, веб-приложения для симуляции инфузии с контролем по цели (TCI).</h2><p style="color:#ddd;font-size:0.9rem">Это руководство содержит 9 глав: первые две охватывают основные функции, чтобы помочь вам начать. Мы перевели руководство на несколько языков. Видеоуроки скоро.</p>`
+
 ]
 
 function displayLanguagePanel() {
