--- a/manual.html
+++ b/manual.html
@@ -1093,6 +1093,8 @@ function loadlanguage(lang,ind,omithistory) {
 			langButtons.forEach(function(langElement) {
 				langElement.querySelector(".languagedescription").innerHTML = languageMatrix[0][0];
 			})
+
+			document.getElementById("welcomemessage").innerHTML = welcomeMessageArray[0];
 	}
 }
 
