--- a/index.html
+++ b/index.html
@@ -1814,6 +1814,7 @@
 		<div id="VScontrols">
 			<div>
 				<div>Load the JSON file here:</div>
+				<div id="VSdropArea"></div>
 				<input type="file" id="myFile2" accept=".json,.JSON,application/json" onchange="VSreadjson()" style="width:100%">
 			</div>
 			<button onclick="VSaltertime();">alter time</button>
