--- a/index.html
+++ b/index.html
@@ -448,13 +448,18 @@
 			<div class="modal-content" id="modalVSimportcontent">
 				<div class="modal-header">Load Vital Signs Capture File</div>
 				<div class="modal-body">
-					<div>Load the JSON file here:</div>
+					<div>Load the CSV file here:</div>
 					<div id="VSdropArea">
-						<div><i class="fas fa-cloud-upload-alt"></i></div>
-						<div>Drag and drop the .CSV file from VSCapture here to begin real-time data transfer.</div>
+						<div style="font-size:400%" class="VSicon"><i class="fas fa-cloud-download-alt"></i></div>
+						<div style="width:80%">Drag and drop the .CSV file from VSCapture here to begin real-time data transfer.</div>
 					</div>
 					<!--<input type="file" id="myFile2" accept=".json,.JSON,application/json" onchange="VSreadjson()" style="width:100%">-->
 				
+					<div id="VSimportmessage">&nbsp;</div>
+					<div id="VSimportbuttons">
+						<a class="button invert disabled" id="VSimportconfirmbtn" onclick="captureBIS();hidemoal('modalVSimport');">Confirm</a>
+						<a class="button alt right" onclick="hidemodal('modalVSimport');">Cancel</a>
+					</div>
 				</div>
 			</div>
 		</div>
