--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 				
 					<div id="VSimportmessage">&nbsp;</div>
 					<div id="VSimportbuttons">
-						<a class="button invert disabled" id="VSimportconfirmbtn" onclick="captureBIS();hidemoal('modalVSimport');">Confirm</a>
+						<a class="button invert disabled" id="VSimportconfirmbtn" onclick="captureBIS(1);VSchartpopulate();hidemodal('modalVSimport');">Confirm</a>
 						<a class="button alt right" onclick="hidemodal('modalVSimport');">Cancel</a>
 					</div>
 				</div>
