--- a/index.html
+++ b/index.html
@@ -1833,7 +1833,7 @@
 			<button onclick="setmodal('modalVSimport')">Open Vital Signs Capture Dialog</button>
 			<div>
 					<button onclick="VSaltertime();">alter time</button>
-					<button onclick="captureBIS(1);">re-process BIS</button>
+					<button onclick="refreshFile(fileEntry,readData2,errorData);">refresh CSV & re-process BIS</button>
 					<button onclick="VSchartpopulate(); myChart3.update();">draw chart</button>
 			</div>
 		</div>
