--- a/index.html
+++ b/index.html
@@ -448,10 +448,10 @@
 			<div class="modal-content" id="modalVSimportcontent">
 				<div class="modal-header">Load Vital Signs Capture File</div>
 				<div class="modal-body">
-					<div>Load the JSON file here:</div>
+					<div>Load the CSV file here:</div>
 					<div id="VSdropArea">
 						<div style="font-size:400%" class="VSicon"><i class="fas fa-cloud-download-alt"></i></div>
-						<div style="width:80%">Drag and drop the .JSON file from VSCapture here to begin real-time data transfer.</div>
+						<div style="width:80%">Drag and drop the .CSV file from VSCapture here to begin real-time data transfer.</div>
 					</div>
 					<!--<input type="file" id="myFile2" accept=".json,.JSON,application/json" onchange="VSreadjson()" style="width:100%">-->
 				
