--- a/index.html
+++ b/index.html
@@ -1829,6 +1829,9 @@
 		<div id="VSchartcontainer">
 			<canvas id="myChart3"></canvas>
 		</div>
+		<div id="VSchartcontainerinfusion">
+			<canvas id="myChart4"></canvas>
+		</div>
 		<div id="VSimportbutton">
 			<button onclick="setmodal('modalVSimport')">Open Vital Signs Capture Dialog</button>
 			<div>
