--- a/index.html
+++ b/index.html
@@ -1826,7 +1826,7 @@
 
 		</div>
 
-		<div id="VSchartcontainer">
+		<div id="VSchartcontainerBIS">
 			<canvas id="myChart3"></canvas>
 		</div>
 		<div id="VSchartcontainerinfusion">
