--- a/index.html
+++ b/index.html
@@ -1846,7 +1846,7 @@
 		</div>
 		<div id="VSimportbutton">
 			<button onclick="setmodal('modalVSimport')">Open Vital Signs Capture Dialog</button>
-			<div>
+			<div style="display:none">
 					<button onclick="VSaltertime();">alter time</button>
 					<button onclick="refreshFile(fileEntry,readData2,errorData);">refresh imported data & re-process BIS</button>
 					<button onclick="VSchartpopulate(); myChart3.update();">draw chart</button>
