--- a/index.html
+++ b/index.html
@@ -476,7 +476,16 @@
 			</div>
 		</div>
 
-
+		<div id="modalVSexplore" class="modal">
+			<div class="modal-content" id="modalVSexplorecontent">
+				<div class="modal-header" id="modalVSexploretitle">Calibration curve</div>
+				<div class="modal-body">
+					<div class="calibrationcurvecontainer">
+						<canvas id="myChart5"></canvas>
+					</div>
+				</div><!--end modal body-->
+			</div>
+		</div>
 
 		<div id="modalLoad" class="modal">
 			<div class="modal-content" id="modalLoadcontent">
