--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 			<div class="modal-content" id="modalVSexplorecontent">
 				<div class="modal-header" id="modalVSexploretitle">Calibration curve</div>
 				<div class="modal-body">
-					<div class="calibrationcurvecontainer">
+					<div id="calibrationcurvecontainer">
 						<canvas id="myChart5"></canvas>
 					</div>
 				</div><!--end modal body-->
