--- a/index.html
+++ b/index.html
@@ -483,6 +483,11 @@
 					<div id="calibrationcurvecontainer">
 						<canvas id="myChart5"></canvas>
 					</div>
+					<div id="calibrationcurvecontrols">
+						Baseline BIS<input id="VSinputBaseline">&nbsp;
+						CE50<input id="VSinputCE50">&nbsp;Gamma1<input id="VSinputGamma1">
+						&nbsp;Gamma2<input id="VSinputGamma2">
+					</div>
 				</div><!--end modal body-->
 			</div>
 		</div>
