--- a/index.html
+++ b/index.html
@@ -1829,11 +1829,11 @@
 		<div id="emulatecard" class="card">
 			<div class="cardtitle">ELEVELD EMULATION</div>
 			<div id="emulatetitlecontainer">
-				<div id="emulatetitleleft">
+				<div id="emulatetitleleft"  style="padding:0.5rem;flex-basis:70%">
 					<span style="font-size:200%;font-weight:bold;line-height:1">eBIS</span>
 					<div style="font-size:80%;opacity:50%" id="">Estimated BIS from Eleveld PD model</div>
 				</div>
-				<div style="font-size:80%;opacity:50%" id="emulatetitleright">
+				<div style="flex-basis: 25%;text-align:center;font-size:400%;font-weight:bold" id="emulatetitleright">
 				</div>
 			</div>
 			<div id="emulateoptions">
