--- a/index.html
+++ b/index.html
@@ -1836,7 +1836,10 @@
 				<div style="flex-basis: 25%;text-align:center;font-size:400%;font-weight:bold" id="emulatetitleright">
 				</div>
 			</div>
-			<div id="emulateoptions">
+			<div id="emulatecontrols">
+				<div style="display:flex;width:100%;height:100%;justify-content:center;align-items:center">
+					<a class="button invert" onclick="emulateEleveldInit();emulateEleveldReal();document.getElementById('emulatecontrols').style.display='none';document.getElementById('emulatechartcontainer').style.display='block';setTimeout(emulatePlot,3000)">Start Emulation</a>
+				</div>
 			</div>
 			<div id="emulatechartcontainer">
 				<canvas id="myChartEmulate"></canvas>
