--- a/index.html
+++ b/index.html
@@ -1828,6 +1828,7 @@
 		<button onclick="emulatePlotUpdate(1)">Update</button>
 		<div id="emulatecard" class="card">
 			<div class="cardtitle">ELEVELD EMULATION</div>
+
 			<div id="emulatetitlecontainer">
 				<div id="emulatetitleleft"  style="padding:0.5rem;flex-basis:70%">
 					<span style="font-size:200%;font-weight:bold;line-height:1">eBIS</span>
@@ -1836,13 +1837,43 @@
 				<div style="flex-basis: 25%;text-align:center;font-size:400%;font-weight:bold" id="emulatetitleright">
 				</div>
 			</div>
-			<div id="emulatecontrols">
-				<div style="display:flex;width:100%;height:100%;justify-content:center;align-items:center">
-					<a class="button invert" onclick="emulateEleveldInit();emulateEleveldReal();document.getElementById('emulatecontrols').style.display='none';document.getElementById('emulatechartcontainer').style.display='block';setTimeout(emulatePlot,3000)">Start Emulation</a>
-				</div>
+			<div id="emulateswitch">
+				<a class="button" onclick="emulateDisplayToggle();">Switch</a>
+				<a class="button" onclick="emulatePopulateRatio();">Ratio</a>
 			</div>
-			<div id="emulatechartcontainer">
-				<canvas id="myChartEmulate"></canvas>
+			<div id="emulatebox">
+				<div id="emulatecontrols">
+					<div>
+						<span style="opacity:0.7;font-size:0.8rem">Ratio to convert <i><span id="emulateRatioModel3">Marsh</span> target</i> to <i>Eleveld target</i> is:<b><span id="emulateRatio"></span></b></span>
+						<div class="customTableRow">
+							<span><b>Eleveld CET</b></span><span><b id="emulateRatioModel1">Marsh</b><br><b>Induction</b></span><span><b id="emulateRatioModel2">Marsh</b><br><b>Maintenance</b></span>
+						</div>
+						<div class="customTableRow">
+							<b><span>1</span></b><span id="emulateRatioX1start"></span><span id="emulateRatioX1"></span>
+						</div>
+						<div class="customTableRow">
+							<b><span>2</span></b><span id="emulateRatioX2start"></span><span id="emulateRatioX2"></span>
+						</div>
+						<div class="customTableRow">
+							<b><span>3</span></b><span id="emulateRatioX3start"></span><span id="emulateRatioX3"></span>
+						</div>
+						<div class="customTableRow">
+							<b><span>4</span></b><span id="emulateRatioX4start"></span><span id="emulateRatioX4"></span>
+						</div>
+						<div class="customTableRow noline">
+							<b><span>5</span></b><span id="emulateRatioX5start"></span><span id="emulateRatioX5"></span>
+						</div>
+						<div class="customTableRow noline">
+
+						</div>
+					</div>
+					<div style="display:flex;width:100%;height: 80px;justify-content:center;align-items:center">
+						<a class="button invert" onclick="emulateEleveldInit();emulateEleveldReal();emulateDisplayToggle();setTimeout(emulatePlot,3000)">Start Emulation</a>
+					</div>
+				</div>
+				<div id="emulatechartcontainer">
+					<canvas id="myChartEmulate"></canvas>
+				</div>
 			</div>
 		</div>
 
