--- a/index.html
+++ b/index.html
@@ -484,9 +484,14 @@
 						<canvas id="myChart5"></canvas>
 					</div>
 					<div id="calibrationcurvecontrols">
-						Baseline BIS<input id="VSinputBaseline">&nbsp;
-						CE50<input id="VSinputCE50">&nbsp;Gamma1<input id="VSinputGamma1">
-						&nbsp;Gamma2<input id="VSinputGamma2">
+						Baseline BIS: <span id="VSinputBaseline">&nbsp;</span>,
+						CE50: <span id="VSinputCE50">&nbsp;</span>, Gamma1: <span id="VSinputGamma1">
+						&nbsp;</span>, Gamma2: <span id="VSinputGamma2">&nbsp;</span>
+						<div>
+							Custom CE50: <span id="VScustomCE50">&nbsp;</span>,
+							Custom Gamma: <span id="VScustomGamma">&nbsp;</span>
+						</div>
+
 					</div>
 				</div><!--end modal body-->
 			</div>
