--- a/index.html
+++ b/index.html
@@ -1818,7 +1818,7 @@
 			</div>
 		</div>
 
-		<div id="emulatecard" class="card">
+		<div id="emulatecard" class="card" style="display:none">
 			<div class="cardtitle">ELEVELD EMULATION</div>
 
 			<div id="emulatetitlecontainer">
