minor bug fixes
- graph height bug fix for desktop devices
- opioid inf unit selector arrow bug
- load complex mode file , opioid tab unresponsive bug

--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@
 					<tr class="fr">
 						<td>
 							<div class="infusionratecontainer" id="infusionratecontainer1"><span id="infusionratedescription1">Infusion rate (ml/h)</span> 
-								<span class="infusionratecontainer" id="infusionrateselector1" onclick="dropdownshow(1)"><i class="fas fa-chevron-down"></i></span>
+								<span class="infusionrateselector" id="infusionrateselector1" onclick="dropdownshow(1)"><i class="fas fa-chevron-down"></i></span>
 								<div class="infusionratedropdown" id="infusionratedropdown1">
 									<a class="infusionratedropdownitem" id="infusionrateoptioncopy0" onclick="setInfusionUnit(0)"><i class="far fa-check-circle infusioncheck"></i>&nbsp; ml/h</a>
 									<a class="infusionratedropdownitem" id="infusionrateoptioncopy1" onclick="setInfusionUnit(1)"><i class="far fa-circle infusioncheck"></i>&nbsp; mg/kg/h</a>
